# roboptim-retargeting

./: .gitignore  CMakeLists.txt  README.md  v.sh
doc/memo/: memo.tex
doc/sympy/: euler-angles.py  euler-angles2.py  utheta.py
doxygen/HEAD/: a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  (+1201 more)
doxygen/HEAD/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7a.js  all_7e.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6a.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  (+101 more)
include/: README.md
include/roboptim/retargeting/: README.md  acceleration-energy.hh  animated-interaction-mesh.hh  bone-length.hh  bone.hh  choreonoid.hh  collision.hh  eigen-rigid-body.hh  eigen-rigid-body.hxx  exception.hh  interaction-mesh.hh  inverse-kinematics.hh  io.hh  laplacian-coordinate.hh  laplacian-deformation-energy.hh  marker-mapping.hh  model  morphing.hh  position.hh  retarget.hh  sum.hh  sum.hxx  torque.hh  utility.hh  zmp.hh
include/roboptim/retargeting/function/: README.md  acceleration.hh  bone-length.hh  choreonoid-body-trajectory.hh  cost-reference-trajectory.hh  distance-to-marker.hh  forward-geometry.hh  libmocap-marker-trajectory.hh  marker-trajectory.hh  minimum-jerk-trajectory.hh  minimum-jerk-trajectory.hxx  rss.hh  torque.hh  zmp.hh
include/roboptim/retargeting/function/body-laplacian-deformation-energy/: choreonoid.hh
include/roboptim/retargeting/function/forward-geometry/: choreonoid.hh
include/roboptim/retargeting/function/joint-to-marker/: choreonoid.hh
include/roboptim/retargeting/function/laplacian-coordinate/: choreonoid.hh
include/roboptim/retargeting/function/laplacian-deformation-energy/: choreonoid.hh
include/roboptim/retargeting/function/marker-laplacian-deformation-energy/: choreonoid.hh
include/roboptim/retargeting/function/torque/: choreonoid.hh  metapod.hh
include/roboptim/retargeting/function/zmp/: choreonoid.hh  inverted-pendulum.hh  metapod.hh
include/roboptim/retargeting/io/: README.md  choreonoid-body-motion.hh  trc.hh
include/roboptim/retargeting/problem/: README.md  function-factory.hh  joint-function-factory.hh  joint-function-factory.hxx  joint-problem-builder.hh  joint-problem-builder.hxx  joint.hh  marker-function-factory.hh  marker-function-factory.hxx  marker-problem-builder.hh  marker-problem-builder.hxx  marker-to-joint-function-factory.hh  marker-to-joint-function-factory.hxx  marker-to-joint-problem-builder.hh  marker-to-joint-problem-builder.hxx  marker.hh  minimum-jerk.hh  problem-builder.hh
share/: CMakeLists.txt  README.md
share/man/man1/: roboptim-retarget-motion.1  roboptim-retargeting-joints.1  roboptim-retargeting-markers-to-joints.1  roboptim-retargeting-markers.1
share/roboptim/retargeting/: log4cxx.xml
share/roboptim/retargeting/data/: 0123-full.yaml  2704-result.yaml  29_07-hrp4c-initial-oneframe.yaml  29_07-hrp4c-initial-short.yaml  29_07-hrp4c-initial.yaml  29_07-markers-hrp4c-one.yaml  29_07-markers-hrp4c-short.yaml  BodyMotion.yaml  README.md  character-cgvu-hrp4c.yaml  dance_one-frame.yaml  dance_ten-frames.yaml  human-to-hrp4c.morphing.yaml  human-to-hrp4c.yaml  human.mars  human.trc  roboptim-retargeting-result.yaml  torque.yaml
src/: CMakeLists.txt  README.md  acceleration-energy.cc  animated-interaction-mesh.cc  bone-length.cc  collision.cc  deformation-energy.cc  directories.hh.in  exception.cc  interaction-mesh.cc  inverse-kinematics.cc  laplacian-coordinate.cc  laplacian-deformation-energy.cc  marker-mapping.cc  morphing.cc  path.cc  path.hh  position.cc  retarget.cc  roboptim-retarget-motion.cc  sum.cc  torque.cc  trc.cc  trc.hh  yaml-helper.cc  yaml-helper.hh  zmp.cc
src/choreonoid/: joint-plugin.cc  minimum-jerk-plugin.cc  roboptim-retargeting-plugin.cc
src/io/: choreonoid-body-motion.cc  trc.cc
src/model/: config.hh  hrp4g2.cc  hrp4g2.hh
src/problem/: joint.cc  marker.cc  minimum-jerk.cc
tests/: CMakeLists.txt  README.md  acceleration-energy.cc  animated-interaction-mesh.cc  body-laplacian-deformation-energy.cc  bone-length.cc  choreonoid-body-trajectory.cc  forward-geometry-choreonoid.cc  interaction-mesh.cc  inverse-kinematics.cc  joint-problem.cc  joint-to-marker-choreonoid.cc  joint-to-marker-choreonoid.launch  joint-to-marker-choreonoid.rviz  laplacian-coordinate-choreonoid.cc  laplacian-coordinate.cc  laplacian-deformation-energy.cc  marker-mapping.cc  minimum-jerk-problem.cc  minimum-jerk.cc  morphing.cc  problem-marker.cc  retarget.cc  tests-config.h.in  torque-choreonoid.cc  torque-metapod.cc  zmp-choreonoid.cc  zmp-metapod.cc
tests/data/: dance_longer-markers.yaml  log4cxx.xml
tests/function/: CMakeLists.txt  choreonoid-body-trajectory.cc  distance-to-marker.cc  libmocap-marker-trajectory.cc  minimum-jerk.cc
tests/function/body-laplacian-deformation-energy/: CMakeLists.txt  body-laplacian-deformation-energy.cc
tests/function/forward-geometry/: CMakeLists.txt  forward-geometry-choreonoid.cc
tests/function/marker-laplacian-deformation-energy/: CMakeLists.txt  marker-laplacian-deformation-energy.cc
tests/function/torque/: CMakeLists.txt  torque-choreonoid.cc  torque-metapod.cc
tests/function/zmp/: CMakeLists.txt  zmp-choreonoid.cc  zmp-metapod.cc
tests/io/: CMakeLists.txt  choreonoid-body-motion.cc  trc.cc
