ROBOPTIM_RETARGETING_TEST(choreonoid-body-trajectory)
ROBOPTIM_RETARGETING_TEST(distance-to-marker)
ROBOPTIM_RETARGETING_TEST(minimum-jerk)

ADD_SUBDIRECTORY(body-laplacian-deformation-energy)
ADD_SUBDIRECTORY(forward-geometry)
ADD_SUBDIRECTORY(marker-laplacian-deformation-energy)
ADD_SUBDIRECTORY(torque)
ADD_SUBDIRECTORY(zmp)
